--- a/.github/workflows/feature-based-delete.yml
+++ b/.github/workflows/feature-based-delete.yml
@@ -31,7 +31,7 @@ jobs:
       - name: remove previous feature
         continue-on-error: true        
         run: |
-          doctl kubernetes cluster kubeconfig save --expiry-seconds 600 ${{ secrets.K8S_STAGING }}
+          doctl kubernetes cluster kubeconfig save --expiry-seconds 600 c7e84602-9029-40ed-9f95-6c113f6693ee
           NAME=${{ env.name }} && sed -i 's|<BRANCH>|'${NAME}'|' $GITHUB_WORKSPACE/deployment/features/all.yaml
           NAME=${{ env.name }} && sed -i 's|<BRANCH>|'${NAME}'|' $GITHUB_WORKSPACE/deployment/features/deployment.yaml
           kubectl delete -f $GITHUB_WORKSPACE/deployment/features/
